
    o	as.matrix(data.frame(d= as.POSIXct("2004-07-20"))) doesn't give a
        wrong warning anymore.

    o	gsub(perl=TRUE) code got the R length of return strings wrong
	in some circumstances (when the string was shortened).  
	(Fixed also PR#7108)

    o   summaryRprof was ignoring functions whose name begins with dot, 
	e.g. .C, .Call, .Fortran. (PR#7137)



		CHANGES IN R VERSION 1.9.1


NEW FEATURES

    o	as.Date() now has a method for "POSIXlt" objects.

    o	mean() has a method for "difftime" objects and so summary()
	works for such objects.

    o	legend() has a new argument 'pt.cex'.

    o	plot.ts() has more arguments, particularly 'yax.flip'.

    o	heatmap() has a new 'keep.dendro' argument.

    o	The default barplot method now handles vectors and 1-d arrays
	(e.g., obtained by table()) the same, and uses grey instead of
	heat color palettes in these cases.  (Also fixes PR#6776.)

    o	nls() now looks for variables and functions in its formula in
	the environment of the formula before the search path, in the
	same way lm() etc look for variables in their formulae.


INSTALLATION ISSUES

    o	src/modules/X11/dataentry.c would not build on some XFree
	4.4.0 systems.	(This is a bug in their header files but we have
	added a workaround.)

    o	Building with gcc/g77 3.4.0 on ix86 platforms failed to produce
	a working build: the critical LAPACK routines are now compiled
	with -ffloat-store.

    o	Added patches to enable 64-bit builds on AIX 5.1: see the R-admin
	manual for details.

    o	Added some patches to allow non-IEEE-754 installations to work
	reasonably well.  (Infs and NAs are still not handled properly
	in complex arithmetic and functions such as sin().  See also
	Deprecated, as support for non-IEEE-754 installations is about
	to be removed.)

    o	Installation will now work in Estonian (et_EE*) locales, which
	sort z before u.  (PR#6958)


DEPRECATED & DEFUNCT

    o	Support for non-IEEE-754 arithmetic (which has been untested