@@ -4,5 +4,5 @@ Priority: base
 Title: The R Base Package
 Author: R Development Core Team and contributors worldwide
 Maintainer: R Core Team <R-core@r-project.org>
-Description: Base R functions and datasets
+Description: Base R functions
 License: GPL Version 2 or later.
