@@ -356,6 +356,11 @@ BUG FIXES
     o   summaryRprof was ignoring functions whose name begins with dot, 
 	e.g. .C, .Call, .Fortran. (PR#7137)
 
+    o   loglin() could segfault if 'start' was of the wrong length.  (PR#7123)
+
+    o   model.tables(type="means") could fail in a design where a
+	projection gave all zeros. (PR#7132)
+
 
 
 		CHANGES IN R VERSION 1.9.1
